# checks

./: LICENSE.txt  README.md  pyproject.toml
src/checks/: __about__.py  __init__.py  check_total_orcamento.py  cli.py  requirements.py  utils.py
tests/: __init__.py
tests/unit/: test_parse_requirements.py
