[project]
name = "checks"
version = "0.0.0-9000"
description = "A package to centralize data checking functionalities related to SEPLAG's SPLOR subsecretariat."
readme = "README.md"
dependencies = [
  'typer >= 0.9',
  'unidecode'
]
requires-python = ">=3.7"
authors = [
  { name = "Francisco Júnior", email = "fjunior.alves.oliveira@gmail.com" },
  { name = "Andrey Labanca", email = "moraislabanca@gmail.com" },
]

[project.urls]
Documentation = "https://github.com/splor-mg/checks#readme"
Issues = "https://github.com/splor-mg/checks-py/issues"
Source = "https://github.com/splor-mg/checks-py"

[project.optional-dependencies]
sql = ["frictionless[sql]"]
postgresql = ["frictionless[postgresql]"]
duckdb = ["frictionless[duckdb]"]
dev = [
    "pytest",
    "coverage",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
check = "checks.cli:app"
